# actKinect

./: .gitignore  CMakeLists.txt  README.md
src/: actKinect.cpp  actKinect.h  main.cpp
